dont know how to combine previous un committed add to current adds, explored bootstrap and could the col elements they are proving to be helpful in griding out how the textboxes and buttons will be laid out

--- a/assets/style.css
+++ b/assets/style.css
@@ -13,3 +13,20 @@ header{
     border-color: rgb(119, 106, 106);
     text-align: center;
 }
+
+textarea{
+    background-color: transparent;
+}
+
+.input{
+white-space: pre-wrap;
+
+}
+.hour{
+columns: 2px;;
+
+
+
+
+
+}
