added color now need to find a way to have it set on the time of the day, also discovered that my col-md measurements needed to be 10 to fill the page, anything less would show that color on the other side and anything more would push the button off the page

--- a/assets/style.css
+++ b/assets/style.css
@@ -18,15 +18,24 @@ textarea{
     background-color: transparent;
 }
 
-.input{
-white-space: pre-wrap;
 
-}
 .hour{
-columns: 2px;;
+row-gap: 2px;
+text-align: center;
+padding-top: 18px;
+background-color: aliceblue;
+}
+
+.past{
+background-color: dimgray;
+}
 
 
+.current{
+background-color: crimson;
+}
 
 
-
+.expected{
+background-color: forestgreen;
 }
